inserted dotenv for getting environment pparameters

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://shahislam9380:fomo_factory_123@cluster0.zckwib7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI = "mongodb+srv://shahislam9380:fomo_factory_123@cluster0.zckwib7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
