stocks is getting successfully fetched

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = "mongodb+srv://shahislam9380:fomo_factory_123@cluster0.zckwib7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+API_KEY = "17GSM29GGL4JQSP9"
