--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.10",
+    "@types/node-cron": "^3.0.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
