--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -27,6 +28,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.10",
     "@types/node-cron": "^3.0.11",
+    "@types/ws": "^8.5.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
