--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/dist/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client && npm install --prefix backend && npm run build --prefix backend"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client && npm install --prefix backend"
   },
   "author": "",
   "license": "ISC",
