--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ API_KEY_2 = '6b35a59e-afc2-4a0b-9e12-c9ddc9129c53'
 API_KEY_3 = 'fda7544f-39bb-4e03-8c05-abc3c46dd16d'
 API_KEY_4 = 'f97b30e3-0af5-4407-9d6f-fde6dbd4e81e'
 PORT = 10000
+PROD_URL = 'https://fomo-factory-mern.onrender.com'
